# Captchas-Automatic-Resolution

./: .gitignore  README.md  consent_selectors.py  demo.py  github_response.html  liens_extraits.csv  pyproject.toml  requirements.txt  resultats_scraping.json  structure.txt  test_ocr.py  train.py
api/: requirements.txt
api/app/: main.py
api/app/api/routes/: captcha.py  scrape.py  training.py
api/app/services/: ocr_service.py
blank/: final_code.py  prof_cookie.py  selenium_tuto.py  test2.py
data/: metadata.csv  results.json
data/processed/: captcha_metadata.json
model/: characters.json  ocr_infer.keras
notebook/: notebook3.ipynb  notebook4.ipynb  notebook_5.ipynb
ocr/: ctc.py  decode.py  model.py  preprocess.py  txt.txt
scraper/: final_code.py  scratch.py  scratch2.py  selenium_tuto.py  test_dom.py
src/: __init__.py  captcha_obs.py  captcha_scraper.py  captcha_solver.py  consent_parser.py  test_json.py
src/webscraping/: captcha_scraper.py  captcha_solver.py  consent_parser.py
tests/: example_with_model.py
utils/: consent_cookies_selectors.py
