[project]
name = "captchas-automatic-resolution"
version = "0.1.0"
description = "JB LE PLUS FORT"
authors = [
    {name = "jbcheze",email = "jbcheze@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (<2.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pillow (>=12.0.0,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
