[project]
name = "captchas-automatic-resolution"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]

package-mode = false

readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "selenium (>=4.39.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "scrapy (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
